[project]
name = "asf-sentinel-1-dataset-toolkit"
version = "0.1.0"
description = "Toolkit for the ASF Sentinel-1 dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asf-search>=10.0.4",
    "gdal>=3.11.4",
    "hyp3-sdk>=7.7.3",
    "mintpy>=1.6.2",
    "pandas>=2.3.2",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
